# Multi-Tenant-Digital-Diary-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ADD_API_KEY.md  CHANGELOG.md  CONTINUE_PROGRESS.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  IMPROVEMENTS.md  Makefile  NEXT_STEPS.md  PRODUCTION_READINESS.md  README.md  README_DEPLOYMENT.md  SETUP_GITHUB.md  STEP_BY_STEP_GUIDE.md  STRUCTURE_IMPROVEMENTS.md  STRUCTURE_REORGANIZATION.md  USAGE_GUIDE.md  YOUR_NEXT_STEPS.md  add-api-key.ps1  build_indexes.sh  build_indexes_docker.py  create_tenant.py  deploy-to-production.ps1  push-to-github.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup-and-push.ps1  setup.py
.github/workflows/: FIX_STAGING.md  ci.yml  deploy.yml
backend/: Dockerfile
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  auth.py  health.py  notes.py  search.py  tasks.py
backend/app/core/: cache.py  config.py  database.py  rate_limit.py  security.py
backend/app/models/: base.py  note.py  task.py  tenant.py  user.py
backend/app/rag/: __init__.py  faiss_index.py  summarization.py  task_extraction.py  utils.py
backend/app/schemas/: auth.py  note.py  task.py  user.py
backend/app/services/: index_service.py  rag_service.py
backend/app/tests/: test_auth.py
docs/: API_KEY_SETUP.md  CI_CD.md  QUICK_START.md  README.md  SECURITY.md  SETUP.md
docs/archive/: CLEANUP_GUIDE.md  COMPLETED_FEATURES.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  DOCUMENTATION_CLEANUP.md  DO_THIS_NOW.md  FINAL_STRUCTURE.md  FIX_SEARCH.md  FIX_STAGING_ERRORS.md  OPTIMIZATION_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_STRUCTURE.md  PUSH_SUCCESS.md  QUICK_DEPLOY.md  QUICK_SECURITY_CHECK.md  REORGANIZE.md  REPOSITORY_UPGRADE.md  SECURITY_GUIDE.md  STAGING_FIXES.md  STAGING_FIX_SUMMARY.md  START_HERE.md
docs/deployment/: DEPLOYMENT.md  PRODUCTION.md
docs/guides/: USAGE.md
frontend/: Dockerfile  streamlit_app.py
infra/: docker-compose.prod.yml  docker-compose.yml  init_db.sql
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml  nginx.conf
pipelines/bigquery_schemas/: embeddings_schema.json  notes_schema.json
pipelines/spark_jobs/: nightly_embeddings_job.py
scripts/: benchmark_retrieval.py  create_faiss_index.py  deploy.sh  seed_demo_data.py
tests/unit/: test_notes.py
