[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-diary-assistant"
version = "1.0.0"
description = "Multi-tenant digital diary platform with RAG-powered knowledge assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["diary", "multi-tenant", "rag", "fastapi", "streamlit", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "langchain>=0.1.14",
    "openai>=1.24.0",
    "faiss-cpu>=1.7.4",
    "redis>=5.0.1",
    "slowapi>=0.1.9",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "isort>=5.13.2",
]
frontend = [
    "streamlit>=1.33.0",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
]
pipelines = [
    "pyspark>=3.5.0",
    "google-cloud-bigquery>=3.17.2",
    "google-cloud-storage>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/sharathd4179/Multi-Tenant-Digital-Diary-Platform"
Documentation = "https://github.com/sharathd4179/Multi-Tenant-Digital-Diary-Platform/tree/main/docs"
Repository = "https://github.com/sharathd4179/Multi-Tenant-Digital-Diary-Platform"
Issues = "https://github.com/sharathd4179/Multi-Tenant-Digital-Diary-Platform/issues"

[tool.setuptools]
packages = ["backend.app"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend.app --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

